syntax = "proto3";

import public "google/protobuf/empty.proto";

option go_package = "github.com/lioia/distributed-pagerank/pkg/services";

package services;

service Node {
  rpc HealthCheck(google.protobuf.Empty) returns (State) {}
  rpc UploadGraph(GraphUpload) returns (MapIntDouble) {}
}

service ClientApi {
  // TODO: change MapIntDouble to Graph message
  rpc SendGraph(MapIntDouble) returns (google.protobuf.Empty) {}
}

message State {
  int32 phase = 1;
  int32 role = 2;
  double c = 3;
  string workQueue = 4;
  string resultQueue = 5;
  repeated string other = 6;
}

message GraphUpload {
  string fromConnection = 1;
  bytes contents = 2;
}

message MapIntDouble { map<int32, double> Map = 1; }
